// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Harness Approval tests Basic snapshot - deploymentform mode: harness-approval-deploymentform 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group approvalMessage sm"
    >
      <label
        class="bp3-label"
        for="spec.approvalMessage"
      >
        pipeline.approvalStep.message
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          name="spec.approvalMessage"
        />
      </div>
    </div>
    <div
      class="bp3-form-group sm"
    >
      <label
        class="bp3-label"
        for="spec.approvers.minimumCount"
      >
        pipeline.approvalStep.minimumCount
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.approvers.minimumCount"
            type="text"
            value="0"
          />
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - input variable view: harness-approval-input variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  >
    <div
      class="main"
    >
      <div
        class="text"
      >
        step.approval.timeout
      </div>
      <div
        class="bp3-popover-wrapper btnWrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color StyledProps--main copyIcon StyledProps--intent-primary"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="copy-alt"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 8 9"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main"
      style="--text-line-clamp: 1;"
    >
      1d
    </p>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - inputset mode but no runtime values: harness-approval-inputset-noruntime 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Harness Approval tests Basic snapshot - inputset mode: input set with errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group bp3-intent-danger approvalMessage sm"
    >
      <label
        class="bp3-label"
        for="spec.approvalMessage"
      >
        pipeline.approvalStep.message
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-intent-danger bp3-fill"
          name="spec.approvalMessage"
        />
        <div
          class="bp3-form-helper-text"
        >
          pipeline.approvalStep.validation.approvalMessage
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger sm"
    >
      <label
        class="bp3-label"
        for="spec.approvers.minimumCount"
      >
        pipeline.approvalStep.minimumCount
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group bp3-intent-danger"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.approvers.minimumCount"
            type="text"
            value="0"
          />
        </div>
        <div
          class="bp3-form-helper-text"
        >
          pipeline.approvalStep.validation.minimumCountRequired
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "approvalMessage": "pipeline.approvalStep.validation.approvalMessage",
    "approvers": {
      "minimumCount": "pipeline.approvalStep.validation.minimumCountRequired"
    }
  }
}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
